# Lab2-graphics

./: .main.cpp.kate-swp  CMakeLists.txt  README.md  framebuffer.cpp  framebuffer.h  main.cpp
